# lycklig

./: CMakeLists.txt  README
kinky/: kinky.desktop  kinky.py  kinky.svgz
src/: cookedtemplate.cpp  cookedtemplate.h  dedistort.cpp  dedistort.h  globalregistrator.cpp  globalregistrator.h  imageops.cpp  imageops.h  imagepatch.cpp  imagepatch.h  lucky.cpp  lucky.h  main.cpp  rbfwarper.cpp  rbfwarper.h  registrationcontext.cpp  registrationcontext.h  registrationparams.cpp  registrationparams.h
